fmd2-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: fmd2
  annotations:
    linkerd.io/inject: enabled
