fmd2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fmd2
spec:
  type: ClusterIP
  ports:
    - port: 6080
      targetPort: fmd2
  selector:
    app: fmd2
    part-of: fmd2
---
kind: Service
apiVersion: v1
metadata:
  name: ak-outpost-proxy01
spec:
  type: ExternalName
  externalName: ak-outpost-proxy01.authentik.svc.cluster.local
  ports:
  - port: 9000
    targetPort: 9000
